--- a/style.css
+++ b/style.css
@@ -1,5 +1,77 @@
-/* Type your code here */
+.header{
+	text-align: right;
+}
 
+.container{
+	background-image: url(./assets/background-image1.png);
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: 50% 100%
+}
+
+.divFoot{
+	margin: 2% 0;
+	font-weight: normal;
+	color: black;
+}
+
+h1{
+	font-family: Arial, Helvetica, sans-serif;
+	margin-bottom: 0;
+	text-shadow: 2px 2px 2px #0000005c;
+}
+p{
+	margin-top: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	color: gray;
+}
+
+table{
+	/* border: 1px solid black; */
+	background-color: white;
+	margin-top: 30px;
+	width: 60%;
+	font-family: Arial, Helvetica, sans-serif;
+	border-spacing: 0;
+	border-collapse: collapse;
+}
+
+td{
+	padding: 10px;
+	font-weight: bold;
+}
+tr{
+	border-bottom: 0.5pt solid rgba(128, 128, 128, 0.422);
+}
+
+tr:first-child{
+	border-bottom: none;
+}
+
+tr:last-child{
+	border-bottom: none;
+}
+
+.table-header{
+	background-color: orangered;
+	color: white;
+}
+
+.status{
+	color: gray;
+	font-weight: lighter;
+}
+
+
+span{
+	position: relative;
+	float: right;
+}
+.logo{
+
+	padding-right: 2%;
+}
 
 /* change the font family and spacing as per your project font */
 .footer{
@@ -14,3 +86,10 @@
     font-style: normal;
     
 }
+
+a{
+	text-decoration: none;
+	color: rgb(0, 187, 255);
+	font-weight: lighter;
+}
+
